# skill-bridge-ai

client/: package-lock.json  package.json
client/src/: App.tsx  main.tsx  styles.css
client/src/components/QuestionCard/: index.tsx
client/src/components/QuestionDialog/: index.tsx
server/: .gitignore  .pre-commit-config.yaml  app.py  models.py  pyproject.toml
server/ai_engine/: __init__.py  main.py  utils.py
server/db/: __init__.py  client.py  functions.py
server/text_collector/: __init__.py  main.py  models.py
